# mc-gm4-linux

./: #pavucontrol.glade#  Cargo.toml  LED_Effects  README.md  default2.cjg  default_hex  dpi_1_2.cjg  dpi_1_2_hex  main.py  rgb
gm4-cli/: Cargo.toml
gm4-core/: Cargo.toml
gm4-core/src/: config.rs  lib.rs  usb.rs
gm4-core/src/protocol/: error.rs  mod.rs
gm4-core/src/protocol/led/: blink.rs  breathe.rs  mod.rs  neon.rs  steady.rs
gm4-gui/: Cargo.toml
gm4-gui/src/: app.rs  main.rs  profiles.rs
gm4-gui/src/effects/: blink_effect_controls.rs  breathe_controls.rs  mod.rs  steady_controls.rs
gm4-protocol-doc/: dpi_off.md
gm4-protocol-doc/led/: steady.md
protocol-doc/: Cfg.ini
protocol-doc/key_config/: right_to_left.dump
protocol-doc/led/: blink.md  breathe.md  steady_efect.md
