[package]
name = "gm4-gui"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version="0.9.1", features=["v3_16"]}
gdk = "0.13.1"
gio = "0.9.0"
glib = "0.10.1"

relm = "0.20.0"
relm-derive = "0.20.0"
gdk-pixbuf ={ version="0.9.0", features=["v2_32"]}
hsl = "0.1.1"

gm4-core = { path="../gm4-core" }
